using System;

namespace ForkEat.Core.Domain;

public class ProductType
{
    public Guid Id { get; set; }

    public string Name { get; set; }
}