using System;

namespace ForkEat.Core.Domain;

public class Unit
{
    public Guid Id { get; set; }
    public string Name { get; set; }
    public string Symbol { get; set; }
}